# cookiecutter-uv

./: .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  README.md  cookiecutter.json  pyproject.toml
docs/: index.md  prompt_arguments.md
docs/features/: cicd.md
hooks/: post_gen_project.py  post_gen_project_old.py
tests/: test_cookiecutter.py  test_generated_project_root.py
{{cookiecutter.project_name}}/: .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  pyproject.toml  render.yaml
{{cookiecutter.project_name}}/.github/workflows/: ci.yml
{{cookiecutter.project_name}}/tests/: pytest.ini  test_foo.py
{{cookiecutter.project_name}}/{{cookiecutter.project_slug}}/: main.py
