[project]
name = "{{cookiecutter.project_name}}"
version = "0.0.1"
description = "{{cookiecutter.project_description}}"
authors = [{ name = "{{cookiecutter.author}}", email = "{{cookiecutter.email}}" }]
readme = "README.md"
requires-python = ">=3.12,<4.0"

[dependency-groups]
dev = [
    "ipykernel>=6.29.5",
    "pytest>=8.3.5",
    "pre-commit>=4.2.0",
    {% if cookiecutter.deptry == 'y' %}"deptry>=0.23.0",{% endif %}
    {% if cookiecutter.codecov == 'y' %}"pytest-cov>=6.1.1",{% endif %}
    "ruff>=0.11.5",
    {% if cookiecutter.mkdocs == 'y' %}"mkdocs>=1.4.2",
    "mkdocs-material>=8.5.10",
    "mkdocstrings[python]>=0.26.1",{% endif %}
]

[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["{{cookiecutter.project_slug}}"]
